--- a/resources/templates/README
+++ b/resources/templates/README
@@ -1,6 +1,6 @@
-# lein-caribou
+# caribou app
 
-FIXME: write description
+A site provisioned in caribou
 
 ## Usage
 
@@ -8,6 +8,6 @@ FIXME: write
 
 ## License
 
-Copyright (C) 2012 FIXME
+Copyright (C) 2012 Instrument Antler
 
 Distributed under the Eclipse Public License, the same as Clojure.
